engine/crates/engine-v2/query-solver/src/tests/snapshots/engine_v2_query_solver__tests__typename__top_level_typename-solved.snap
---
source: engine/crates/engine-v2/query-solver/src/tests/schema1.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label=\"\", style=dashed]\n    1 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label="", style=dashed]
    1 -> 0 [ cost=0, steiner=0]
}
